modifico hrefs de sección Proyectos

--- a/index.html
+++ b/index.html
@@ -116,16 +116,16 @@
             <div class="filtros">
                 <ul class="filtros-lista">
                     <li>
-                        <a href="" class="proyectos-filtro resaltado">Todos</a>
+                        <a href="#todos" class="proyectos-filtro resaltado">Todos</a>
                     </li>
                     <li>
-                        <a href="" class="proyectos-filtro">HTML/CSS</a>
+                        <a href="#HTML/CSS" class="proyectos-filtro">HTML/CSS</a>
                     </li>
                     <li>
-                        <a href="" class="proyectos-filtro">JavaScript</a>
+                        <a href="#JavaScript" class="proyectos-filtro">JavaScript</a>
                     </li>
                     <li>
-                        <a href="" class="proyectos-filtro">React</a>
+                        <a href="#React" class="proyectos-filtro">React</a>
                     </li>
                 </ul>
             </div>
