--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Portfolio - Agus Ardisana</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico">
 </head>
 
 <body>
