--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </nav>
         </div>
 
-        <div class="menu-hamburguesa">
+        <div class="menu-hamburguesa" aria-label="Menu">
             <i class="fas fa-bars"></i>
         </div>
 
