actualizo seccion proyectos

--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
                     <p class="proyecto-nombre">Portfolio</p>
                 </div>
 
-                <div class="proyecto-item" data-tecnologia="ninguna">
-                    <img class="proyecto-imagen" src="images/projects-under-construction.svg" />
-                    <p class="proyecto-nombre">Más en Construcción</p>
+                <div class="proyecto-item" data-tecnologia="javascript">
+                    <img class="proyecto-imagen" src="images/projects-shop.svg" />
+                    <p class="proyecto-nombre">Tienda</p>
                 </div>
 
-                <div class="proyecto-item" data-tecnologia="ninguna">
-                    <img class="proyecto-imagen" src="images/projects-under-construction.svg" />
-                    <p class="proyecto-nombre">Más en Construcción</p>
+                <div class="proyecto-item" data-tecnologia="javascript">
+                    <img class="proyecto-imagen" src="images/projects-game.svg" />
+                    <p class="proyecto-nombre">Match3</p>
                 </div>
             </div>
         </div>
