agrego links externos

--- a/index.html
+++ b/index.html
@@ -152,20 +152,20 @@
 
             <!--Agrego "proyectos en construcci'on" para mantener simetria-->
             <div class="tabla proyectos-bloque">
-                <div class="proyecto-item" data-tecnologia="html">
+                <a href="#sobre-mi" class="proyecto-item" data-tecnologia="html">
                     <img class="proyecto-imagen" src="images/projects-portfolio.png" />
                     <p class="proyecto-nombre">Portfolio</p>
-                </div>
+                </a>
 
-                <div class="proyecto-item" data-tecnologia="javascript">
+                <a href="https://agustinaardisana.github.io/TP2-Tienda/" target="_blank" class="proyecto-item" data-tecnologia="javascript">
                     <img class="proyecto-imagen" src="images/projects-shop.svg" />
                     <p class="proyecto-nombre">Tienda</p>
-                </div>
+                </a>
 
-                <div class="proyecto-item" data-tecnologia="javascript">
+                <a href="https://agustinaardisana.github.io/TP3_matcheADAs_submarino/" target="_blank" class="proyecto-item" data-tecnologia="javascript">
                     <img class="proyecto-imagen" src="images/projects-game.svg" />
                     <p class="proyecto-nombre">Match3</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
