english version created

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -17,16 +17,16 @@
         <nav class="contenedor nav-menu">
             <ul class="menu-header">
                 <li class="nav-item">
-                    <a href="#sobre-mi" class="nav-link">HOLA</a>
+                    <a href="#sobre-mi" class="nav-link">HI</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#conocimientos" class="nav-link">CONOCIMIENTOS</a>
+                    <a href="#conocimientos" class="nav-link">KNOWLEDGE</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#proyectos" class="nav-link">PROYECTOS</a>
+                    <a href="#proyectos" class="nav-link">PROJECTS</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://contacto" target="_blank" class="nav-link resaltado">CONTACTO</a>
+                    <a href="http://contacto" target="_blank" class="nav-link resaltado">CONTACT</a>
                 </li>
             </ul>
         </nav>
@@ -35,16 +35,16 @@
             <nav class="contenedor nav-menu-responsive">
                 <ul class="menu-header responsive">
                     <li class="nav-item">
-                        <a href="#sobre-mi" class="nav-link">HOLA</a>
+                        <a href="#sobre-mi" class="nav-link">HI</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#conocimientos" class="nav-link">CONOCIMIENTOS</a>
+                        <a href="#conocimientos" class="nav-link">KNOWLEDGE</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#proyectos" class="nav-link">PROYECTOS</a>
+                        <a href="#proyectos" class="nav-link">PROJECTS</a>
                     </li>
                     <li class="nav-item">
-                        <a href="http://contacto" target="_blank" class="nav-link resaltado">CONTACTO</a>
+                        <a href="http://contacto" target="_blank" class="nav-link resaltado">CONTACT</a>
                     </li>
                 </ul>
             </nav>
@@ -61,10 +61,10 @@
     <main id="sobre-mi" class="seccion-presentacion">
         <div class="contenedor contenido-principal">
             <div class="presentacion">
-                <p class="saludo">¡Hola! Soy</p>
+                <p class="saludo">¡Hi! I'm</p>
                 <h1 class="nombre">Agus Ardisana</h1>
-                <p class="detalles">Desarrolladora Frontend en construcción</p>
-                <a href="#proyectos" class="resaltado-presentacion">LO QUE HAGO</a>
+                <p class="detalles">Frontend Developer under construction</p>
+                <a href="#proyectos" class="resaltado-presentacion">WHAT I DO</a>
             </div>
             <div class="presentacion">
                 <img src="images/img-about.svg" class="imagen-presentacion">
@@ -76,10 +76,8 @@
     <!--Fin secci'on presentaci'on - Comienzo Secci'on Habilidades-->
     <section id="conocimientos" class="seccion-habilidades">
         <div class="contenedor conocimientos-bloque">
-            <h2 class="titulo-seccion">Mis Conocimientos</h2>
-            <p class="conocimientos-descripcion">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi
-                consequuntur
-                debitis molestias. Perspiciatis, sed nisi? Tenetur, deserunt.</p>
+            <h2 class="titulo-seccion">My Knowledge</h2>
+            <p class="conocimientos-descripcion">This are the technologies that I can work with.</p>
 
             <div class="tabla conocimientos-tabla">
                 <div class="conocimientos-item">
@@ -119,19 +117,27 @@
     <section class="seccion-cita">
         <div class="contenedor cita-contenido">
             <i class="fas fa-quote-right"></i>
-            <p class="cita">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti consequuntur consectetur
+            <!-- <p class="cita">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti consequuntur consectetur
                 nisi in atque
                 magnam, nam distinctio veritatis eius, illum exercitationem, accusamus blanditiis dolor dignissimos
                 velit
                 deleniti repellendus odit numquam!</p>
-            <h3>Someone</h3>
+            <h3>Someone</h3> -->
+            <p class="cita">There are people flailing around, shouting, “Oh God, what do we do?!?”. 
+
+                There are people shouting, “I know exactly what we should do!”. 
+                
+                And then there are people busy at work, whispering, “This is what I know how to do.” 
+                
+                I want to be in that last group.</p>
+            <h3>Austin Kleon</h3>
         </div>
     </section>
 
     <!--Fin secci'on cita - Comienzo secci'on Proyectos-->
     <section id="proyectos" class="seccion-proyecto">
         <div class="contenedor">
-            <h2 class="titulo-seccion">Mis Proyectos</h2>
+            <h2 class="titulo-seccion">My Projects</h2>
 
             <div class="filtros">
                 <ul class="filtros-lista">
@@ -159,12 +165,22 @@
 
                 <a href="https://agustinaardisana.github.io/TP2-Tienda/" target="_blank" class="proyecto-item" data-tecnologia="javascript">
                     <img class="proyecto-imagen" src="images/projects-shop.svg" />
-                    <p class="proyecto-nombre">Tienda</p>
+                    <p class="proyecto-nombre">Online Store</p>
                 </a>
 
                 <a href="https://agustinaardisana.github.io/TP3_matcheADAs_submarino/" target="_blank" class="proyecto-item" data-tecnologia="javascript">
                     <img class="proyecto-imagen" src="images/projects-game.svg" />
                     <p class="proyecto-nombre">Match3</p>
+                </a>
+
+                <a href="https://agustinaardisana.github.io/TP5-Comics_Search_Engine/" target="_blank" class="proyecto-item" data-tecnologia="javascript">
+                    <img class="proyecto-imagen" src="images/projects-comics.svg" />
+                    <p class="proyecto-nombre">Comics Finder</p>
+                </a>
+
+                <a href="" target="_blank" class="proyecto-item" data-tecnologia="react">
+                    <img class="proyecto-imagen" src="images/projects-under-construction.svg" />
+                    <p class="proyecto-nombre">Under Construction</p>
                 </a>
             </div>
         </div>
@@ -175,16 +191,16 @@
         <nav class="nav-footer">
             <ul class="footer-nav-menu">
                 <li class="nav-item">
-                    <a href="#sobre-mi" class="footer-nav-link">HOLA</a>
+                    <a href="#sobre-mi" class="footer-nav-link">HI</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#conocimientos" class="footer-nav-link">CONOCIMIENTOS</a>
+                    <a href="#conocimientos" class="footer-nav-link">KNOWLEDGE</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#proyectos" class="footer-nav-link">PROYECTOS</a>
+                    <a href="#proyectos" class="footer-nav-link">PROJECTS</a>
                 </li>
                 <li class="nav-item">
-                    <a href="http://contacto" target="_blank" class="footer-nav-link">CONTACTO</a>
+                    <a href="http://contacto" target="_blank" class="footer-nav-link">CONTACT</a>
                 </li>
             </ul>
         </nav>
@@ -207,7 +223,7 @@
             </li>
         </ul>
 
-        <p class="copyright">Hecho con ❤️ en Ada por Agus</p>
+        <p class="copyright">Made with ❤️ at Ada ITW by Agus Ardisana</p>
 
     </footer>
     <script src="index.js"></script>
