target:_blank added

--- a/index.html
+++ b/index.html
@@ -207,17 +207,17 @@
 
         <ul class="footer-social">
             <li class="social-item">
-                <a href="https://github.com/agustinaardisana" class="footer-social-link github-link">
+                <a href="https://github.com/agustinaardisana" target="_blank" class="footer-social-link github-link">
                     <i class="fab fa-github-square social-icon"></i>
                 </a>
             </li>
             <li class="social-item">
-                <a href="https://www.linkedin.com/in/agustinaardisana/" class="footer-social-link linkedin-link">
+                <a href="https://www.linkedin.com/in/agustinaardisana/" target="_blank" class="footer-social-link linkedin-link">
                     <i class="fab fa-linkedin social-icon"></i>
                 </a>
             </li>
             <li class="social-item">
-                <a href="mailto:agustinaardisana@gmail.com" class="footer-social-link email-link">
+                <a href="mailto:agustinaardisana@gmail.com" target="_blank" class="footer-social-link email-link">
                     <i class="fas fa-envelope-square social-icon"></i>
                 </a>
             </li>
