texts and projects updated

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <div class="presentacion">
                 <p class="saludo">¡Hi! I'm</p>
                 <h1 class="nombre">Agus Ardisana</h1>
-                <p class="detalles">Frontend Developer under construction</p>
-                <a href="#proyectos" class="resaltado-presentacion">WHAT I DO</a>
+                <p class="detalles">Frontend Web Developer</p>
+                <a href="#proyectos" class="resaltado-presentacion">MY WORK</a>
             </div>
             <div class="presentacion">
                 <img src="images/img-about.svg" class="imagen-presentacion">
@@ -178,9 +178,9 @@
                     <p class="proyecto-nombre">Comics Finder</p>
                 </a>
 
-                <a href="" target="_blank" class="proyecto-item" data-tecnologia="react">
-                    <img class="proyecto-imagen" src="images/projects-under-construction.svg" />
-                    <p class="proyecto-nombre">Under Construction</p>
+                <a href="https://moviesandtvdatabase.netlify.app/" target="_blank" class="proyecto-item" data-tecnologia="react">
+                    <img class="proyecto-imagen" src="images/projects-movies.svg" />
+                    <p class="proyecto-nombre">Movies and TV Database</p>
                 </a>
             </div>
         </div>
@@ -223,7 +223,7 @@
             </li>
         </ul>
 
-        <p class="copyright">Made with ❤️ at Ada ITW by Agus Ardisana</p>
+        <p class="copyright">Made with ❤️ in Ada ITW by Agus Ardisana</p>
 
     </footer>
     <script src="index.js"></script>
