--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
 
     </main>
 
+    <div class="wave-container">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#F0EEE4" fill-opacity="1" d="M0,96L60,90.7C120,85,240,75,360,101.3C480,128,600,192,720,192C840,192,960,128,1080,106.7C1200,85,1320,107,1380,117.3L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path></svg>
+    </div>
+
     <!--Fin secci'on presentaci'on - Comienzo Secci'on Habilidades-->
     <section id="conocimientos" class="seccion-habilidades">
         <div class="contenedor conocimientos-bloque">
@@ -113,16 +118,18 @@
             </div>
     </section>
 
+    <div class="wave-container top">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#C86733" fill-opacity="1" 
+            d="M0,224L120,224C240,224,480,224,720,229.3C960,235,1200,245,1320,250.7L1440,256L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path>
+        </svg>
+    </div>
+
     <!--Fin secci'on habilidades - Comienzo secci'on cita-->
     <section class="seccion-cita">
-        <div class="contenedor cita-contenido">
+        <blockquote class="contenedor cita-contenido">
             <i class="fas fa-quote-right"></i>
-            <!-- <p class="cita">Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti consequuntur consectetur
-                nisi in atque
-                magnam, nam distinctio veritatis eius, illum exercitationem, accusamus blanditiis dolor dignissimos
-                velit
-                deleniti repellendus odit numquam!</p>
-            <h3>Someone</h3> -->
+            
             <p class="cita">There are people flailing around, shouting, “Oh God, what do we do?!?”. 
 
                 There are people shouting, “I know exactly what we should do!”. 
@@ -131,8 +138,14 @@
                 
                 I want to be in that last group.</p>
             <h3>Austin Kleon</h3>
-        </div>
+        </blockquote>
     </section>
+
+    <div class="wave-container">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#C86733" fill-opacity="1" d="M0,32L60,42.7C120,53,240,75,360,85.3C480,96,600,96,720,85.3C840,75,960,53,1080,58.7C1200,64,1320,96,1380,112L1440,128L1440,0L1380,0C1320,0,1200,0,1080,0C960,0,840,0,720,0C600,0,480,0,360,0C240,0,120,0,60,0L0,0Z"></path>
+        </svg>
+    </div>
 
     <!--Fin secci'on cita - Comienzo secci'on Proyectos-->
     <section id="proyectos" class="seccion-proyecto">
@@ -186,6 +199,11 @@
         </div>
     </section>
 
+    <div class="wave-container top">   
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#C48A69" fill-opacity="1" d="M0,96L60,90.7C120,85,240,75,360,101.3C480,128,600,192,720,192C840,192,960,128,1080,106.7C1200,85,1320,107,1380,117.3L1440,128L1440,320L1380,320C1320,320,1200,320,1080,320C960,320,840,320,720,320C600,320,480,320,360,320C240,320,120,320,60,320L0,320Z"></path>
+          </svg>
+    </div>
     <!--Fin secci'on proyectos - Comienzo footer-->
     <footer>
         <nav class="nav-footer">
@@ -226,6 +244,7 @@
         <p class="copyright">Made with ❤️ in Ada ITW by Agus Ardisana</p>
 
     </footer>
+
     <script src="index.js"></script>
 </body>
 
